Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -4,29 +4,29 @@
   <title>Stuff Bernard Likes - Authors</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="/theme/css/main.css"/>
-  <link rel="stylesheet" href="/theme/css/pure-min.css"/>
-  <link rel="stylesheet" href="/theme/css/grids-responsive-min.css"/>
-  <link rel="stylesheet" href="/theme/css/fork-awesome.min.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/main.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/pure-min.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/grids-responsive-min.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/fork-awesome.min.css"/>
 <meta property="og:site_name" content="Stuff Bernard Likes"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="Stuff Bernard Likes"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="http://granitosaurus.rocks/wil"/>
 </head>
 <body>
 <div class="navigation pure-menu pure-menu-horizontal pure-menu-scrollable">
-  <a href="/" class="pure-menu-heading  pure-menu-link">Stuff Bernard Likes</a>
+  <a href="http://granitosaurus.rocks/wil/" class="pure-menu-heading  pure-menu-link">Stuff Bernard Likes</a>
   <ul class="pure-menu-list">
   </ul>
 </div>
     <h1>Authors on Stuff Bernard Likes</h1>
     <ul>
-        <li><a href="/author/bernard.html">Bernard</a> (16)</li>
+        <li><a href="http://granitosaurus.rocks/wil/author/bernard.html">Bernard</a> (16)</li>
     </ul>
 <footer class="index-footer">
-  <a href="/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
+  <a href="http://granitosaurus.rocks/wil/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
   <a href="http://github.com/granitosaurus/wil">made with WIL</a>
   <a href="https://github.com/getpelican/pelican/">pelican</a>
   <a href="http://granitosaurus.rocks">blog</a>
