--- a/archives.html
+++ b/archives.html
@@ -4,20 +4,20 @@
   <title>Stuff Bernard Likes - Archives</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="/theme/css/main.css"/>
-  <link rel="stylesheet" href="/theme/css/pure-min.css"/>
-  <link rel="stylesheet" href="/theme/css/grids-responsive-min.css"/>
-  <link rel="stylesheet" href="/theme/css/fork-awesome.min.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/main.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/pure-min.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/grids-responsive-min.css"/>
+  <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/fork-awesome.min.css"/>
 <meta property="og:site_name" content="Stuff Bernard Likes"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="Stuff Bernard Likes"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="http://granitosaurus.rocks/wil"/>
 </head>
 <body>
 <div class="navigation pure-menu pure-menu-horizontal pure-menu-scrollable">
-  <a href="/" class="pure-menu-heading  pure-menu-link">Stuff Bernard Likes</a>
+  <a href="http://granitosaurus.rocks/wil/" class="pure-menu-heading  pure-menu-link">Stuff Bernard Likes</a>
   <ul class="pure-menu-list">
   </ul>
 </div>
@@ -25,40 +25,40 @@
 
 <dl>
     <dt>Sun 16 February 2020</dt>
-    <dd><a href="/coffee.html">Coffee</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/coffee.html">Coffee</a></dd>
     <dt>Sun 16 February 2020</dt>
-    <dd><a href="/lofi-hip-hop.html">Lofi Hip-Hop</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/lofi-hip-hop.html">Lofi Hip-Hop</a></dd>
     <dt>Sun 16 February 2020</dt>
-    <dd><a href="/tea.html">Tea</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/tea.html">Tea</a></dd>
     <dt>Fri 14 February 2020</dt>
-    <dd><a href="/economy.html">Economy</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/economy.html">Economy</a></dd>
     <dt>Thu 13 February 2020</dt>
-    <dd><a href="/philosophy.html">Philosophy</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/philosophy.html">Philosophy</a></dd>
     <dt>Thu 13 February 2020</dt>
-    <dd><a href="/succulents.html">Succulents</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/succulents.html">Succulents</a></dd>
     <dt>Sun 02 February 2020</dt>
-    <dd><a href="/thailand.html">Thailand</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/thailand.html">Thailand</a></dd>
     <dt>Sun 02 February 2020</dt>
-    <dd><a href="/watercolor.html">Watercolor</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/watercolor.html">Watercolor</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/chicken.html">Chicken</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/chicken.html">Chicken</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/doom-metal.html">Doom Metal</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/doom-metal.html">Doom Metal</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/harmonica.html">Harmonica</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/harmonica.html">Harmonica</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/horror-books.html">Horror Books</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/horror-books.html">Horror Books</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/japan.html">Japan</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/japan.html">Japan</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/origami.html">Origami</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/origami.html">Origami</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/shrimp.html">Shrimp</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/shrimp.html">Shrimp</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="/vaporwave.html">Vaporwave</a></dd>
+    <dd><a href="http://granitosaurus.rocks/wil/vaporwave.html">Vaporwave</a></dd>
 </dl>
 <footer class="index-footer">
-  <a href="/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
+  <a href="http://granitosaurus.rocks/wil/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
   <a href="http://github.com/granitosaurus/wil">made with WIL</a>
   <a href="https://github.com/getpelican/pelican/">pelican</a>
   <a href="http://granitosaurus.rocks">blog</a>
