Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,12 @@
 <h1>Archives for Stuff Bernard Likes</h1>
 
 <dl>
+    <dt>Tue 18 February 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/wil/sauna.html">Sauna</a></dd>
+    <dt>Tue 18 February 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/wil/geese.html">Geese</a></dd>
+    <dt>Mon 17 February 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/wil/rats.html">Rats</a></dd>
     <dt>Sun 16 February 2020</dt>
     <dd><a href="http://granitosaurus.rocks/wil/coffee.html">Coffee</a></dd>
     <dt>Sun 16 February 2020</dt>
