Generating Pelican site

--- a/archives.html
+++ b/archives.html
@@ -61,6 +61,8 @@
     <dt>Sat 01 February 2020</dt>
     <dd><a href="http://granitosaurus.rocks/wil/shrimp.html">Shrimp</a></dd>
     <dt>Sat 01 February 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/wil/snakes.html">Snakes</a></dd>
+    <dt>Sat 01 February 2020</dt>
     <dd><a href="http://granitosaurus.rocks/wil/vaporwave.html">Vaporwave</a></dd>
 </dl>
 <footer class="index-footer">
