Generating Pelican site

--- a/rats.html
+++ b/rats.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="http://granitosaurus.rocks/wil/theme/css/fork-awesome.min.css"/>
 
 <meta name="author" content="Bernard"/>
-<meta name="description" content="Rats are absolutely adorable, smart and such fun creatures! I used to have 3 rats and were some of great friends!"/>
+<meta name="description" content="Rats are absolutely adorable, smart and such fun creatures! I used to have 3 rats and were some of the best friends I&#39;ve had!"/>
 <meta property="og:site_name" content="Stuff Bernard Likes"/>
 <meta property="og:title" content="Rats"/>
-<meta property="og:description" content="Rats are absolutely adorable, smart and such fun creatures! I used to have 3 rats and were some of great friends!"/>
+<meta property="og:description" content="Rats are absolutely adorable, smart and such fun creatures! I used to have 3 rats and were some of the best friends I&#39;ve had!"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="http://granitosaurus.rocks/wil/rats.html"/>
 <meta property="og:type" content="article"/>
