Generating Pelican site

--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
 <h1>Archives for Stuff Bernard Likes</h1>
 
 <dl>
+    <dt>Tue 25 February 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/likes/zdislav-beksinski.html">Zdislav Beksinski</a></dd>
     <dt>Tue 18 February 2020</dt>
     <dd><a href="http://granitosaurus.rocks/likes/sauna.html">Sauna</a></dd>
     <dt>Tue 18 February 2020</dt>
