Generating Pelican site

--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,12 @@
 <h1>Archives for Stuff Bernard Likes</h1>
 
 <dl>
+    <dt>Sat 18 July 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/likes/dinosaurs.html">Dinosaurs</a></dd>
+    <dt>Sat 18 July 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/likes/matcha-tea.html">Matcha Tea</a></dd>
+    <dt>Fri 28 February 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/likes/photography.html">Photography</a></dd>
     <dt>Tue 25 February 2020</dt>
     <dd><a href="http://granitosaurus.rocks/likes/zdislav-beksinski.html">Zdislav Beksinski</a></dd>
     <dt>Tue 18 February 2020</dt>
