Generating Pelican site

--- a/archives.html
+++ b/archives.html
@@ -27,7 +27,11 @@
     <dt>Sat 18 July 2020</dt>
     <dd><a href="http://granitosaurus.rocks/likes/dinosaurs.html">Dinosaurs</a></dd>
     <dt>Sat 18 July 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/likes/manga.html">Manga</a></dd>
+    <dt>Sat 18 July 2020</dt>
     <dd><a href="http://granitosaurus.rocks/likes/matcha-tea.html">Matcha Tea</a></dd>
+    <dt>Sat 18 July 2020</dt>
+    <dd><a href="http://granitosaurus.rocks/likes/outrun.html">Outrun</a></dd>
     <dt>Fri 28 February 2020</dt>
     <dd><a href="http://granitosaurus.rocks/likes/photography.html">Photography</a></dd>
     <dt>Tue 25 February 2020</dt>
