--- a/tags.html
+++ b/tags.html
@@ -37,6 +37,7 @@
       <a href="http://granitosaurus.rocks/likes/tag/health.html">health</a>
       <a href="http://granitosaurus.rocks/likes/tag/hobbies.html">hobbies</a>
       <a href="http://granitosaurus.rocks/likes/tag/horror.html">horror</a>
+      <a href="http://granitosaurus.rocks/likes/tag/japan.html">japan</a>
       <a href="http://granitosaurus.rocks/likes/tag/music.html">music</a>
       <a href="http://granitosaurus.rocks/likes/tag/nature.html">nature</a>
       <a href="http://granitosaurus.rocks/likes/tag/painting.html">painting</a>
@@ -44,6 +45,7 @@
       <a href="http://granitosaurus.rocks/likes/tag/photography.html">photography</a>
       <a href="http://granitosaurus.rocks/likes/tag/place.html">place</a>
       <a href="http://granitosaurus.rocks/likes/tag/plant.html">plant</a>
+      <a href="http://granitosaurus.rocks/likes/tag/reading.html">reading</a>
       <a href="http://granitosaurus.rocks/likes/tag/style.html">style</a>
       <a href="http://granitosaurus.rocks/likes/tag/theory.html">theory</a>
       <a href="http://granitosaurus.rocks/likes/tag/tool.html">tool</a>
