Generating Pelican site

--- a/rats.html
+++ b/rats.html
@@ -70,7 +70,7 @@ Finally they don't live very long and are very attachable. Two of my rats died o
 
 <footer class="index-footer">
   <a href="http://granitosaurus.rocks/likes/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
-  <a href="http://github.com/granitosaurus/wil">made with WIL</a>
+  <a href="http://github.com/granitosaurus/likes">made with "likes"</a>
   <a href="https://github.com/getpelican/pelican/">pelican</a>
   <a href="http://granitosaurus.rocks">blog</a>
 </footer>
