--- a/coffee.html
+++ b/coffee.html
@@ -68,7 +68,7 @@ It's such a cosy procedure that really got me hooked on it. </p>
 
 <footer class="index-footer">
   <a href="http://granitosaurus.rocks/likes/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
-  <a href="http://github.com/granitosaurus/wil">made with WIL</a>
+  <a href="http://github.com/granitosaurus/likes">made with "likes"</a>
   <a href="https://github.com/getpelican/pelican/">pelican</a>
   <a href="http://granitosaurus.rocks">blog</a>
 </footer>
