--- a/economy.html
+++ b/economy.html
@@ -70,7 +70,7 @@ Turned out that there's a podcast too by the same author. I've been listening to
 
 <footer class="index-footer">
   <a href="http://granitosaurus.rocks/likes/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
-  <a href="http://github.com/granitosaurus/wil">made with WIL</a>
+  <a href="http://github.com/granitosaurus/likes">made with "likes"</a>
   <a href="https://github.com/getpelican/pelican/">pelican</a>
   <a href="http://granitosaurus.rocks">blog</a>
 </footer>
