Generating Pelican site

--- a/archives.html
+++ b/archives.html
@@ -4,20 +4,20 @@
   <title>Stuff Bernard Likes - Archives</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="http://granitosaurus.rocks/likes/theme/css/main.css"/>
-  <link rel="stylesheet" href="http://granitosaurus.rocks/likes/theme/css/pure-min.css"/>
-  <link rel="stylesheet" href="http://granitosaurus.rocks/likes/theme/css/grids-responsive-min.css"/>
-  <link rel="stylesheet" href="http://granitosaurus.rocks/likes/theme/css/fork-awesome.min.css"/>
+  <link rel="stylesheet" href="http://granitosaur.us/likes/theme/css/main.css"/>
+  <link rel="stylesheet" href="http://granitosaur.us/likes/theme/css/pure-min.css"/>
+  <link rel="stylesheet" href="http://granitosaur.us/likes/theme/css/grids-responsive-min.css"/>
+  <link rel="stylesheet" href="http://granitosaur.us/likes/theme/css/fork-awesome.min.css"/>
 <meta property="og:site_name" content="Stuff Bernard Likes"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="Stuff Bernard Likes"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://granitosaurus.rocks/likes"/>
+<meta property="og:url" content="http://granitosaur.us/likes"/>
 </head>
 <body>
 <div class="navigation pure-menu pure-menu-horizontal pure-menu-scrollable">
-  <a href="http://granitosaurus.rocks/likes/" class="pure-menu-heading  pure-menu-link">Stuff Bernard Likes</a>
+  <a href="http://granitosaur.us/likes/" class="pure-menu-heading  pure-menu-link">Stuff Bernard Likes</a>
   <ul class="pure-menu-list">
   </ul>
 </div>
@@ -25,58 +25,58 @@
 
 <dl>
     <dt>Sat 18 July 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/dinosaurs.html">Dinosaurs</a></dd>
+    <dd><a href="http://granitosaur.us/likes/dinosaurs.html">Dinosaurs</a></dd>
     <dt>Sat 18 July 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/manga.html">Manga</a></dd>
+    <dd><a href="http://granitosaur.us/likes/manga.html">Manga</a></dd>
     <dt>Sat 18 July 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/matcha-tea.html">Matcha Tea</a></dd>
+    <dd><a href="http://granitosaur.us/likes/matcha-tea.html">Matcha Tea</a></dd>
     <dt>Sat 18 July 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/outrun.html">Outrun</a></dd>
+    <dd><a href="http://granitosaur.us/likes/outrun.html">Outrun</a></dd>
     <dt>Fri 28 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/photography.html">Photography</a></dd>
+    <dd><a href="http://granitosaur.us/likes/photography.html">Photography</a></dd>
     <dt>Tue 25 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/zdislav-beksinski.html">Zdislav Beksinski</a></dd>
+    <dd><a href="http://granitosaur.us/likes/zdislav-beksinski.html">Zdislav Beksinski</a></dd>
     <dt>Tue 18 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/sauna.html">Sauna</a></dd>
+    <dd><a href="http://granitosaur.us/likes/sauna.html">Sauna</a></dd>
     <dt>Tue 18 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/geese.html">Geese</a></dd>
+    <dd><a href="http://granitosaur.us/likes/geese.html">Geese</a></dd>
     <dt>Mon 17 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/rats.html">Rats</a></dd>
+    <dd><a href="http://granitosaur.us/likes/rats.html">Rats</a></dd>
     <dt>Sun 16 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/coffee.html">Coffee</a></dd>
+    <dd><a href="http://granitosaur.us/likes/coffee.html">Coffee</a></dd>
     <dt>Sun 16 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/lofi-hip-hop.html">Lofi Hip-Hop</a></dd>
+    <dd><a href="http://granitosaur.us/likes/lofi-hip-hop.html">Lofi Hip-Hop</a></dd>
     <dt>Sun 16 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/tea.html">Tea</a></dd>
+    <dd><a href="http://granitosaur.us/likes/tea.html">Tea</a></dd>
     <dt>Fri 14 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/economy.html">Economy</a></dd>
+    <dd><a href="http://granitosaur.us/likes/economy.html">Economy</a></dd>
     <dt>Thu 13 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/philosophy.html">Philosophy</a></dd>
+    <dd><a href="http://granitosaur.us/likes/philosophy.html">Philosophy</a></dd>
     <dt>Thu 13 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/succulents.html">Succulents</a></dd>
+    <dd><a href="http://granitosaur.us/likes/succulents.html">Succulents</a></dd>
     <dt>Sun 02 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/thailand.html">Thailand</a></dd>
+    <dd><a href="http://granitosaur.us/likes/thailand.html">Thailand</a></dd>
     <dt>Sun 02 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/watercolor.html">Watercolor</a></dd>
+    <dd><a href="http://granitosaur.us/likes/watercolor.html">Watercolor</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/chicken.html">Chicken</a></dd>
+    <dd><a href="http://granitosaur.us/likes/chicken.html">Chicken</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/doom-metal.html">Doom Metal</a></dd>
+    <dd><a href="http://granitosaur.us/likes/doom-metal.html">Doom Metal</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/harmonica.html">Harmonica</a></dd>
+    <dd><a href="http://granitosaur.us/likes/harmonica.html">Harmonica</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/horror-books.html">Horror Books</a></dd>
+    <dd><a href="http://granitosaur.us/likes/horror-books.html">Horror Books</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/japan.html">Japan</a></dd>
+    <dd><a href="http://granitosaur.us/likes/japan.html">Japan</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/origami.html">Origami</a></dd>
+    <dd><a href="http://granitosaur.us/likes/origami.html">Origami</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/shrimp.html">Shrimp</a></dd>
+    <dd><a href="http://granitosaur.us/likes/shrimp.html">Shrimp</a></dd>
     <dt>Sat 01 February 2020</dt>
-    <dd><a href="http://granitosaurus.rocks/likes/vaporwave.html">Vaporwave</a></dd>
+    <dd><a href="http://granitosaur.us/likes/vaporwave.html">Vaporwave</a></dd>
 </dl>
 <footer class="index-footer">
-  <a href="http://granitosaurus.rocks/likes/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
+  <a href="http://granitosaur.us/likes/" title="Stuff Bernard Likes">Stuff Bernard Likes</a>
   <a href="http://github.com/granitosaurus/likes">made with "likes"</a>
   <a href="https://github.com/getpelican/pelican/">pelican</a>
   <a href="http://granitosaurus.rocks">blog</a>
